tests/sumo/output/e3/errors/id_duplicated/errors.sumo
Error: entryExitDetector detector '3/1to2/1' could not be built (declared twice?).
Quitting (on error).
